unpackaged/main/default/objects/TermAndCondition__c/TermAndCondition__c.object-meta.xml
<CustomObject>
    <description>This object stores the Terms and Conditions accepted by the users.</description>
    <label>Term and Condition</label>
    <nameField>
        <displayFormat>TAC-{000000000}</displayFormat>
        <label>Term and Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>