unpackaged/main/default/objects/TermAndCondition__c/fields/ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationName__c</fullName>
    <description>Application Name.</description>
    <externalId>true</externalId>
    <inlineHelpText>Application Name.</inlineHelpText>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>