unpackaged/main/default/objects/TermAndCondition__c/fields/BuildNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildNumber__c</fullName>
    <description>Build Number.</description>
    <externalId>true</externalId>
    <inlineHelpText>Build Number.</inlineHelpText>
    <label>Build Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>