unpackaged/main/default/objects/TermAndCondition__c/fields/PackageName__c.field-meta.xml
<CustomField>
    <fullName>PackageName__c</fullName>
    <description>Package Name.</description>
    <externalId>true</externalId>
    <inlineHelpText>Package Name.</inlineHelpText>
    <label>Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>