unpackaged/main/default/objects/TermAndCondition__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User related to the Terms and Conditions accepted.</description>
    <inlineHelpText>User related to the Terms and Conditions accepted.</inlineHelpText>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Terms and Conditions</relationshipLabel>
    <relationshipName>TermsAndConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>