unpackaged/main/default/objects/TermAndCondition__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version.</description>
    <externalId>true</externalId>
    <inlineHelpText>Version.</inlineHelpText>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>